- BenchmarkGoal extended  - ExperimentEvaluation adapted (except documentation)  - Include set of real-world BMGoals
is tested